integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project_Member__c/fields/Added_At__c.field-meta.xml
<CustomField>
    <fullName>Added_At__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Added At</label>
    <type>DateTime</type>
</CustomField>