integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project_Member__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>CostPilot_Project__c</referenceTo>
    <relationshipLabel>Project Members</relationshipLabel>
    <relationshipName>Project_Members</relationshipName>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>