integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project_Member__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Project Manager</fullName><default>false</default><label>Project Manager</label></value>
            <value><fullName>Contributor</fullName><default>true</default><label>Contributor</label></value>
            <value><fullName>Reviewer</fullName><default>false</default><label>Reviewer</label></value>
            <value><fullName>Observer</fullName><default>false</default><label>Observer</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>