integrations/salesforce/agentforce-poc/force-app/main/default/objects/CostPilot_Project_Member__c/fields/Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_User__c</fullName>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CostPilot Project Memberships</relationshipLabel>
    <relationshipName>CostPilot_Project_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>